--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API Viewer</title>
+    <title>Aurora Expeditions API Viewer</title>
     <style>
         * {
             margin: 0;
@@ -355,8 +355,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🔌 API Viewer</h1>
-            <p>Connect to your API and view JSON responses</p>
+            <h1>🐧 Aurora Expeditions API Viewer 🐻‍❄️</h1>
+            <p>View voyage cabin, pricing, promotion and availability directly from the Aurora Expeditions API</p>
         </div>
         
         <div class="content">
